# git-permalink-fixer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  git_permalink_checker.py  pyproject.toml
.github/: paths-filter.yml
.github/workflows/: bandit.yml  devskim.yml  lint.yml  publish.yml  snyk-python.yml  sonarcloud.yml  test.yml
git_permalink_checker_lib/: constants.py  file_ops.py  git_utils.py  permalink.py  web_utils.py
src/git_permalink_checker/: __init__.py  __main__.py  web_utils.py
src/git_permalink_fixer/: __init__.py  __main__.py  app.py  constants.py  file_ops.py  git_utils.py  global_prefs.py  operation_set.py  permalink_info.py  session_prefs.py  text_utils.py  url_utils.py  web_utils.py
tests/git_permalink_fixer/: test_app_evaluate_candidate.py  test_app_process_permalink.py  test_app_verify_content.py  test_file_ops.py
