[project]
name = "git-permalink-fixer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "huyz", email = "huyz@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
"git-permalink-fixer" = "git_permalink_fixer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
line-length = 100  # Default is 88

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/git_permalink_fixer"]

[tool.black]
line-length = 100  # Default is 88

[tool.prettier]
tabWidth = 4  # Default is 2